# alchemyst

./: .coveragerc  .dockerignore  .drone.yml  .flake8  .gitignore  .gitlab-ci.yml  .gitleaksignore  .kicsignore  Dockerfile  Dockerfile.base  Dockerfile.test  Model.md  Pipfile  README.md  app-config.yaml  backend.Dockerfile  cat-Pipfile.txt  docker-compose.yml  frontend.Dockerfile  go  gunicorn_config.py  logging.conf  main.py  pyproject.toml  pytest.ini  requirements.txt  run-local.sh  run.py  setup.py  sonar-project.properties
alchemyst/: __init__.py  cache.py
alchemyst/api/: datastore.py  document.py  notes.py  routes.py  storage.py
alchemyst/model/: document.py  note.py
alchemyst/static/: robots.txt  search.json  site.webmanifest
alchemyst/templates/: 404.html  500.html  (+10 more)
bootstrap/: bootstrap.sh  load_notes.py
config/: default.conf
data/: pdf.json
data_loader/: convert_pdf_csv_to_json.py  insert_note.py  load_data.py  pdf.json  strip_html.py
docs/: Model.md  PDF-Conversion.md
documents/: to-be-processed.txt
k8s/: certificate.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  pdb.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
scripts/: deploy.sh
terraform/: domain.tf  service-split.tf  service.tf  variables.tf
tests/: test_core_pages.py  test_note_pages.py  test_redirects.py
wip/: Doc-Conversion.md  convert_pdf_csv_to_json.py  convert_pdf_to_html.py
wip/new/: Pipfile  README.md  out-aspose.html  out-pdf2htmlex.html  out-pdftotree.html  out.html  pdf_to_html.py  pyproject.toml  pyproject.toml.old
(+156 files in other folders)
