[project]
name = "alchemyst"
version = "0.1.0"
description = "My university chemistry notes, on the internet"
readme = "README.md"
requires-python = "~=3.14.0"
dependencies = [
    "cryptography>=46.0.5",
    "dacite>=1.9.2",
    "flask>=3.1.1",
    "flask-caching>=2.3.1",
    "flask-compress>=1.17",
    "flask-wtf>=1.2.2",
    "google-cloud>=0.34.0",
    "google-cloud-datastore>=2.21.0",
    "google-cloud-storage>=3.1.0",
    "gunicorn>=23.0.0",
    "prometheus-flask-exporter>=0.23.2",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "beautifulsoup4>=4.13.4",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-flake8>=1.3.0",
    "pytest-mock>=3.14.0",
    "pytest-socket>=0.7.0",
    "pytest-timeout>=2.4.0",
    "pytest-watch>=4.2.0",
    "ruff>=0.14.9",
]

[project.scripts]
alchemyst = "alchemyst:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
